Fix wax seal on mobiles

--- a/styles.css
+++ b/styles.css
@@ -264,7 +264,7 @@ input::placeholder {
         max-height: 170px;
     }
     .wax-seal {
-        top: 20%;
+        top: 15%;
     }
 }
 
@@ -306,6 +306,6 @@ input::placeholder {
         max-height: 150px;
     }
     .wax-seal {
-        top: 22%;
+        top: 18%;
     }
 }
